--- a/config.toml
+++ b/config.toml
@@ -5,9 +5,17 @@ copyright = "Dead Poet at Limbo"
 theme = "diary"
 # googleAnalytics = "UA-123-45"
 
+enableGitalk = true
+
 [params]
 subtitle = "Dead Poet at Limbo"
 disqusShortname = "weberlam"
+
+[params.gitalk]
+  owner = "weberlam"
+  repo = "weberlam.com"
+  client_id = "5db10fd38341a889e601"
+  client_secret = "34a5a222217df354bf57aafb207e2464bb9d153f"
 
 [taxonomies]
    tag = "tags"
