--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ disqusShortname = "weberlam"
 
 [params.gitalk]
   owner = "weberlam"
-  repo = "weberlam.com"
+  repo = "weberlam/weberlam.com"
   client_id = "5db10fd38341a889e601"
   client_secret = "34a5a222217df354bf57aafb207e2464bb9d153f"
 
